node-test-server/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: node-test-server-mtls-strict
spec:
  mtls:
    mode: STRICT
