node-test-server/test-deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-test-server-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-test-server
  template:
    metadata:
      labels:
        app: node-test-server
        version: v1
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: node-test-server
          image: kimsehwan96/node-server
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          resources:
            request:
              cpu: 50m
            limits:
              cpu: 50m
