node-test-server/test-deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-test-server-v2
spec:
  selector:
    matchLabels:
      app: node-test-server
      version: v2
  template:
    metadata:
      labels:
        app: node-test-server
        version: v2
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: node-test-server
          image: kimsehwan96/node-server
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 100m
