node-test-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-test-server-service
labels:
  app: node-test-server
spec:
  type: ClusterIP
  selector:
    app: node-test-server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
