node-test-server/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-test-server-virtualservice-internal
spec:
  hosts:
    - node-test-server-service.node-test-server.svc.cluster.local
  http:
  - route:
    - destination:
        host: node-test-server-service.node-test-server.svc.cluster.local
        port:
          number: 80
        subset: v1
      weight: 90
    - destination:
        host: node-test-server-service.node-test-server.svc.cluster.local
        port:
          number: 80
        subset: v2
      weight: 10
